--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,19 @@ GMAIL_APP_PASSWORD="your_gmail_app_password"
 
 # The email address from which emails will be sent (usually the same as the Gmail account you generated the app password for).
 GMAIL_EMAIL="your_email@example.com"
+
+# The following Key Value (KV) environment variables can be retrieved directly from Vercel
+# after integrating with your application. Visit your Vercel project settings under
+# Settings > Environment Variables to find these values.
+
+# URL for connecting to the Key Value (KV) store. This may be used for application-specific data storage.
+KV_URL="your_kv_url"
+
+# REST API URL for the Key Value (KV) store, used for making RESTful calls to the service.
+KV_REST_API_URL="your_kv_rest_api_url"
+
+# Token used to authenticate requests to the Key Value (KV) REST API, ensuring secure access to the service.
+KV_REST_API_TOKEN="your_kv_rest_api_token"
+
+# Read-only token for accessing the Key Value (KV) REST API, allowing limited access to retrieve data without modification permissions.
+KV_REST_API_READ_ONLY_TOKEN="your_kv_rest_api_read_only_token"
