--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@svgr/webpack": "^8.1.0",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@upstash/ratelimit": "^2.0.3",
-    "@vercel/kv": "^3.0.0",
+    "@upstash/redis": "^1.34.3",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
