--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
+    "input-otp": "^1.2.4",
     "jiti": "^1.21.6",
     "lucide-react": "^0.453.0",
     "next": "^14.2.15",
