--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@rescale/nemo": "^1.3.0",
     "@svgr/webpack": "^8.1.0",
     "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-table": "^8.20.5",
     "@upstash/ratelimit": "^2.0.4",
     "@upstash/redis": "^1.34.3",
     "bcryptjs": "^2.4.3",
