--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@icons-pack/react-simple-icons": "^10.1.0",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@react-email/components": "^0.0.28",
     "@react-email/render": "^1.0.2",
