--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tanstack/react-table": "^8.20.5",
     "@upstash/ratelimit": "^2.0.4",
     "@upstash/redis": "^1.34.3",
+    "@vercel/blob": "^0.26.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.1",
