--- a/package.json
+++ b/package.json
@@ -34,18 +34,24 @@
     "@svgr/webpack": "^8.1.0",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-table": "^8.20.5",
+    "@types/exceljs": "^0.5.3",
+    "@types/jspdf": "^1.3.3",
     "@upstash/ratelimit": "^2.0.4",
     "@upstash/redis": "^1.34.3",
     "@vercel/blob": "^0.26.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.1",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "input-otp": "^1.4.1",
     "jiti": "^2.4.0",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.460.0",
     "next": "^14.2.15",
     "next-auth": "^4.24.10",
     "nodemailer": "^6.9.16",
+    "papaparse": "^5.5.1",
     "react": "^18",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
@@ -61,8 +67,10 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.16",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-google-recaptcha": "^2.1.9",
