--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vercel/blob": "^0.26.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.1",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
