docs: update .env.example with

--- a/.env.example
+++ b/.env.example
@@ -1,69 +1,62 @@
-# The public-facing base URL of your Next.js application (usually includes the domain).
+# Application Base Configuration
+# The public-facing base URL of your Next.js application
 NEXT_PUBLIC_BASE_URL="https://example.com"
+# The Vercel deployment URL of your application
+NEXT_PUBLIC_VERCEL_URL="example.vercel.app"
+# Current environment mode - either "development" or "production"
+NODE_ENV="development"
 
-# URL used by NextAuth for handling authentication routes and callbacks (typically same as your base URL).
+# Authentication Configuration
+# URL used by NextAuth for handling authentication routes and callbacks
 NEXTAUTH_URL="https://example.com"
-
-# Email address of the administrator, which has the authority to sign up and can have the admin role by default.
+# Secret used by NextAuth to encrypt session tokens and other sensitive data
+NEXTAUTH_SECRET="generate-a-secure-32-character-secret"
+# Email address of the administrator with signup authority and default admin role
 ADMIN_EMAIL="admin@example.com"
 
-# Public site key for Google reCAPTCHA v2, used in forms to prevent bots (get it from Google reCAPTCHA admin console).
+# ReCAPTCHA Configuration
+# Public site key for Google reCAPTCHA v2 (from Google reCAPTCHA admin console)
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY="your-recaptcha-site-key"
-
-# Secret key for Google reCAPTCHA v2, used on the server side for verifying users (get it from Google reCAPTCHA admin console).
+# Secret key for Google reCAPTCHA v2 server-side verification
 RECAPTCHA_SECRET_KEY="your-recaptcha-secret-key"
 
-# The following database environment variables can be retrieved directly from Neon
-# after integrating Neon with Vercel. Visit your Vercel project settings under
-# Settings > Environment Variables to find these values.
+# Email Configuration
+# App-specific password for Gmail (requires 2FA and app password generation)
+GMAIL_APP_PASSWORD="19-character-password"
+# Gmail address used for sending application emails
+GMAIL_EMAIL="your-email@gmail.com"
 
-# The connection string used to connect to your PostgreSQL database.
+# Database Configuration
+# Main PostgreSQL connection string
 POSTGRES_URL="postgres://user:password@host:port/database"
-
-# Prisma-specific PostgreSQL connection string, similar to POSTGRES_URL but formatted for Prisma.
+# Prisma-specific PostgreSQL connection string
 POSTGRES_PRISMA_URL="postgresql://user:password@host:port/database?schema=public"
-
-# PostgreSQL connection string without SSL for local development or environments that don't require SSL.
+# PostgreSQL connection string without SSL for local development
 POSTGRES_URL_NO_SSL="postgres://user:password@host:port/database?sslmode=disable"
-
-# PostgreSQL connection string used in non-pooling environments (no connection pool).
+# PostgreSQL connection string for non-pooling environments
 POSTGRES_URL_NON_POOLING="postgres://user:password@host:port/database?pooling=false"
-
-# The username used to connect to your PostgreSQL database.
+# Database user credentials and connection details
 POSTGRES_USER="your_db_username"
-
-# The host of your PostgreSQL database (e.g., `localhost` for local dev or the host provided by Neon).
 POSTGRES_HOST="your_db_host"
-
-# The password used to authenticate with your PostgreSQL database.
 POSTGRES_PASSWORD="your_db_password"
-
-# The name of the specific PostgreSQL database you're connecting to.
 POSTGRES_DATABASE="your_db_name"
 
-# Secret used by NextAuth to encrypt session tokens and other sensitive data.
-# Generate a secure secret using a random string generator (e.g., OpenSSL).
-NEXTAUTH_SECRET="your_nextauth_secret"
+# Key-Value Storage Configuration
+# URL for connecting to the Key Value store
+KV_URL="your-kv-url"
+# REST API URL for the Key Value store
+KV_REST_API_URL="your-kv-rest-api-url"
+# Authentication token for Key Value REST API access
+KV_REST_API_TOKEN="your-kv-rest-api-token"
+# Read-only authentication token for Key Value REST API
+KV_REST_API_READ_ONLY_TOKEN="your-kv-rest-api-read-only-token"
 
-# App-specific password for Gmail, used for sending emails programmatically.
-# Obtain this by enabling 2FA and generating an app password in Google Account settings.
-GMAIL_APP_PASSWORD="your_gmail_app_password"
+# Redis Configuration
+# Upstash Redis REST API endpoint URL
+UPSTASH_REDIS_REST_URL="your-upstash-redis-url"
+# Authentication token for Upstash Redis REST API
+UPSTASH_REDIS_REST_TOKEN="your-upstash-redis-token"
 
-# The email address from which emails will be sent (usually the same as the Gmail account you generated the app password for).
-GMAIL_EMAIL="your_email@example.com"
-
-# The following Key Value (KV) environment variables can be retrieved directly from Vercel
-# after integrating with your application. Visit your Vercel project settings under
-# Settings > Environment Variables to find these values.
-
-# URL for connecting to the Key Value (KV) store. This may be used for application-specific data storage.
-KV_URL="your_kv_url"
-
-# REST API URL for the Key Value (KV) store, used for making RESTful calls to the service.
-KV_REST_API_URL="your_kv_rest_api_url"
-
-# Token used to authenticate requests to the Key Value (KV) REST API, ensuring secure access to the service.
-KV_REST_API_TOKEN="your_kv_rest_api_token"
-
-# Read-only token for accessing the Key Value (KV) REST API, allowing limited access to retrieve data without modification permissions.
-KV_REST_API_READ_ONLY_TOKEN="your_kv_rest_api_read_only_token"
+# Storage Configuration
+# Authentication token for read/write access to blob storage
+BLOB_READ_WRITE_TOKEN="your-blob-read-write-token"
