refactor: update import statements to use content module for better organization

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -21,6 +21,8 @@
     "^@/types/(.*)$",
     "^@/constants$",
     "^@/constants/(.*)$",
+    "^@/content/(.*)$",
+    "^@/content$",
     "^@/hooks$",
     "^@/hooks/(.*)$",
     "^@/lib/utils$",
