--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-select": "^2.1.2",
     "@react-email/components": "^0.0.32",
     "@react-email/render": "^1.0.4",
@@ -39,7 +40,7 @@
     "@vercel/blob": "^0.27.1",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.1",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
@@ -52,6 +53,7 @@
     "nodemailer": "^6.9.16",
     "papaparse": "^5.5.1",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
