--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@react-email/components": "^0.0.32",
     "@react-email/render": "^1.0.4",
     "@svgr/webpack": "^8.1.0",
-    "@t3-oss/env-nextjs": "^0.11.1",
+    "@t3-oss/env-core": "^0.12.0",
+    "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-table": "^8.20.6",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.3",
