--- a/.env.example
+++ b/.env.example
@@ -1,62 +1,100 @@
-# Application Base Configuration
-# The public-facing base URL of your Next.js application
+# ────────────────────────────────────────────────────────────────
+# 🌍 Application Configuration
+# ────────────────────────────────────────────────────────────────
+
+# The public-facing base URL of your Next.js application (must include protocol)
 NEXT_PUBLIC_BASE_URL="https://example.com"
-# The Vercel deployment URL of your application
+
+# The Vercel deployment URL of your application (auto-assigned by Vercel)
 NEXT_PUBLIC_VERCEL_URL="example.vercel.app"
-# Current environment mode - either "development" or "production"
+
+# Current environment mode (options: "development" | "production")
 NODE_ENV="development"
 
-# Authentication Configuration
-# URL used by NextAuth for handling authentication routes and callbacks
+# ────────────────────────────────────────────────────────────────
+# 🔐 Authentication Configuration
+# ────────────────────────────────────────────────────────────────
+
+# Base URL for authentication callbacks
 NEXTAUTH_URL="https://example.com"
-# Secret used by NextAuth to encrypt session tokens and other sensitive data
-NEXTAUTH_SECRET="generate-a-secure-32-character-secret"
-# Email address of the administrator with signup authority and default admin role
+
+# Secret key for NextAuth.js (must be a secure 32-character string)
+NEXTAUTH_SECRET="your-secure-nextauth-secret"
+
+# Admin email with signup authority and default admin privileges
 ADMIN_EMAIL="admin@example.com"
 
-# ReCAPTCHA Configuration
-# Public site key for Google reCAPTCHA v2 (from Google reCAPTCHA admin console)
+# ────────────────────────────────────────────────────────────────
+# ✅ reCAPTCHA Configuration
+# ────────────────────────────────────────────────────────────────
+
+# Public site key for Google reCAPTCHA v2 (visible to the client)
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY="your-recaptcha-site-key"
-# Secret key for Google reCAPTCHA v2 server-side verification
+
+# Secret key for server-side reCAPTCHA verification
 RECAPTCHA_SECRET_KEY="your-recaptcha-secret-key"
 
-# Email Configuration
-# App-specific password for Gmail (requires 2FA and app password generation)
-GMAIL_APP_PASSWORD="19-character-password"
-# Gmail address used for sending application emails
+# ────────────────────────────────────────────────────────────────
+# 📧 Email Configuration
+# ────────────────────────────────────────────────────────────────
+
+# Gmail address used for sending emails
 GMAIL_EMAIL="your-email@gmail.com"
 
-# Database Configuration
-# Main PostgreSQL connection string
+# Gmail App Password (generated in Google Security settings)
+GMAIL_APP_PASSWORD="your-gmail-app-password"
+
+# ────────────────────────────────────────────────────────────────
+# 🗄️ Database Configuration (PostgreSQL)
+# ────────────────────────────────────────────────────────────────
+
+# Main PostgreSQL connection string (replace with actual credentials)
 POSTGRES_URL="postgres://user:password@host:port/database"
-# Prisma-specific PostgreSQL connection string
+
+# Prisma-specific connection string
 POSTGRES_PRISMA_URL="postgresql://user:password@host:port/database?schema=public"
-# PostgreSQL connection string without SSL for local development
+
+# Connection string for local development without SSL
 POSTGRES_URL_NO_SSL="postgres://user:password@host:port/database?sslmode=disable"
-# PostgreSQL connection string for non-pooling environments
+
+# Connection string for environments without connection pooling
 POSTGRES_URL_NON_POOLING="postgres://user:password@host:port/database?pooling=false"
-# Database user credentials and connection details
-POSTGRES_USER="your_db_username"
-POSTGRES_HOST="your_db_host"
-POSTGRES_PASSWORD="your_db_password"
-POSTGRES_DATABASE="your_db_name"
 
-# Key-Value Storage Configuration
-# URL for connecting to the Key Value store
+# Individual database credentials (for advanced configurations)
+POSTGRES_USER="your-db-username"
+POSTGRES_HOST="your-db-host"
+POSTGRES_PASSWORD="your-db-password"
+POSTGRES_DATABASE="your-db-name"
+
+# ────────────────────────────────────────────────────────────────
+# 🔑 Key-Value Storage Configuration
+# ────────────────────────────────────────────────────────────────
+
+# Base URL for the Key-Value store
 KV_URL="your-kv-url"
-# REST API URL for the Key Value store
-KV_REST_API_URL="your-kv-rest-api-url"
-# Authentication token for Key Value REST API access
-KV_REST_API_TOKEN="your-kv-rest-api-token"
-# Read-only authentication token for Key Value REST API
-KV_REST_API_READ_ONLY_TOKEN="your-kv-rest-api-read-only-token"
 
-# Redis Configuration
-# Upstash Redis REST API endpoint URL
+# REST API endpoint for Key-Value store
+KV_REST_API_URL="your-kv-rest-api-url"
+
+# Authentication token for full access to Key-Value storage
+KV_REST_API_TOKEN="your-kv-rest-api-token"
+
+# Read-only authentication token (for restricted access)
+KV_REST_API_READ_ONLY_TOKEN="your-kv-read-only-token"
+
+# ────────────────────────────────────────────────────────────────
+# 🚀 Redis Configuration (Upstash)
+# ────────────────────────────────────────────────────────────────
+
+# Upstash Redis REST API endpoint
 UPSTASH_REDIS_REST_URL="your-upstash-redis-url"
-# Authentication token for Upstash Redis REST API
+
+# Authentication token for Upstash Redis
 UPSTASH_REDIS_REST_TOKEN="your-upstash-redis-token"
 
-# Storage Configuration
+# ────────────────────────────────────────────────────────────────
+# 🗂️ Storage Configuration (Blob Storage)
+# ────────────────────────────────────────────────────────────────
+
 # Authentication token for read/write access to blob storage
 BLOB_READ_WRITE_TOKEN="your-blob-read-write-token"
