--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@t3-oss/env-core": "^0.12.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-table": "^8.20.6",
+    "@types/grecaptcha": "^3.0.9",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.5",
     "@vercel/blob": "^0.27.2",
