--- a/.env.example
+++ b/.env.example
@@ -28,7 +28,7 @@ ADMIN_EMAIL="admin@example.com"
 # ✅ reCAPTCHA Configuration
 # ────────────────────────────────────────────────────────────────
 
-# Public site key for Google reCAPTCHA v2 (visible to the client)
+# Public site key for Google reCAPTCHA v3
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY="your-recaptcha-site-key"
 
 # Secret key for server-side reCAPTCHA verification
