chore: update Prettier configuration to enforce consistent quote properties

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -33,5 +33,6 @@
     "^[./]"
   ],
   "importOrderSeparation": false,
-  "importOrderSortSpecifiers": false
+  "importOrderSortSpecifiers": false,
+  "quoteProps": "consistent"
 }
