fix: update base URL format in .env.example

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # ────────────────────────────────────────────────────────────────
 
 # The public-facing base URL of your Next.js application (must include protocol)
-NEXT_PUBLIC_BASE_URL="https://example.com"
+NEXT_PUBLIC_BASE_URL="example.com"
 
 # The Vercel deployment URL of your application (auto-assigned by Vercel)
 NEXT_PUBLIC_VERCEL_URL="example.vercel.app"
